--- a/styles/login.css
+++ b/styles/login.css
@@ -1,37 +1,42 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   background: #1d6711;
   display: grid;
   place-content: center;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  position: absolute;
-  row-gap: 5rem;
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  width: 90vw;
+  max-width: 700px;
+  margin-top: 4rem;
 }
 
 section {
-  display: flex;
-  flex-direction: column;
-  width: 60vw;
-  max-width: 500px;
+  display: grid;
   row-gap: 1rem;
-  margin: 0 auto;
+  border: 1px solid blue;
+  width: 100%;
+  margin-top: 4rem;
 }
 
 input {
   padding: 0.75rem 0 0.75rem 1rem;
   border-radius: 4px;
+  letter-spacing: 1px;
   border: none;
 }
 
 .logo {
-  margin: 0 auto;
+  border: 1px solid yellow;
 }
 
 .btn {
@@ -40,6 +45,7 @@ input {
   letter-spacing: 1px;
   text-align: center;
   border: none;
+  font-size: 1rem;
 }
 
 #login-btn {
@@ -52,4 +58,10 @@ input {
   color: white;
 
   text-decoration: none;
+}
+
+@media (max-width: 600px) {
+  .logo {
+    transform: scale(0.7);
+  }
 }
