--- a/cadastro/style/cadastro.css
+++ b/cadastro/style/cadastro.css
@@ -22,7 +22,7 @@
 body {
     
     font-size: var(--tam-fonte);
-    background-image: url('../img/Login\ \(Desktop\).png');
+    background-image: url('../img/Desktop\ -\ 1.png');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
