--- a/styles/nav.css
+++ b/styles/nav.css
@@ -1,6 +1,9 @@
 * {
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 nav {
@@ -8,10 +11,9 @@ nav {
   background: #059954;
   align-items: center;
   justify-content: space-between;
+  padding: 0 40px;
   height: 50px;
-  padding: 0 2rem;
 }
-
 #hamburguer-menu {
   display: none;
 }
@@ -30,17 +32,23 @@ nav {
 }
 
 #links-container a.active {
-  color: orange;
+  color: #faa33f;
 }
 
 #logo-nav {
-  transform: scale(0.6);
+  height: 35px;
 }
 
-button {
+.button {
   padding: 0.25rem 0.75rem;
   border-radius: 4px;
+  color: whitesmoke;
   border: none;
+  text-decoration: none;
+}
+
+.button:nth-child(2) {
+  background: #f25c05;
 }
 
 @media (max-width: 900px) {
