--- a/style/nav.css
+++ b/style/nav.css
@@ -17,7 +17,28 @@ nav {
   list-style: none;
   column-gap: 40px;
   letter-spacing: 1px;
+  transition: all 1s;
+}
+
+.nav-link {
   opacity: 0.7;
+  padding: 0.5rem 0.25rem;
+}
+
+.nav-link a {
+  text-decoration: none;
+  color: white;
+}
+
+.nav-link:hover {
+  cursor: pointer;
+}
+
+.nav-link.ativo {
+  opacity: 1;
+  font-weight: 600;
+  color: #f25c05;
+  text-shadow: 2px 3px 1px rgba(0, 0, 0, 0.295);
 }
 
 #buttons-container {
