--- a/style/homePage.css
+++ b/style/homePage.css
@@ -1,5 +1,4 @@
 #main {
-  border: 1px solid red;
   margin: 0 auto 6rem auto;
   color: white;
 }
@@ -9,8 +8,8 @@
   align-items: center;
   height: 60px;
   background: #059954;
-  justify-content: space-around;
-  column-gap: 8rem;
+  justify-content: space-between;
+  padding: 0 10%;
 }
 
 #container-pesquisa input {
@@ -19,7 +18,7 @@
   outline: none;
   border-radius: 4px;
   font-size: 18px;
-  width: 40%;
+  width: 50%;
   padding: 0 1rem;
 }
 
@@ -37,6 +36,7 @@
 .container-title {
   position: absolute;
   top: -45px;
+  left: 10px;
   color: black;
   font-weight: 600;
   font-size: 20px;
@@ -63,4 +63,85 @@
   box-shadow: 3px 5px 5px rgba(0, 0, 0, 0.432);
   color: white;
   letter-spacing: 1px;
+}
+
+#container-sugestoes-chef {
+  max-width: 1460px;
+  margin: 6rem auto 0 auto;
+  position: relative;
+}
+
+.container-cards-produtos {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 60px 120px;
+  justify-content: center;
+}
+
+.product-card {
+  width: 400px;
+  height: 300.6px;
+  box-shadow: 3px 4px 5px rgba(0, 0, 0, 0.055);
+}
+
+.product-card:last-child {
+}
+
+.product-img {
+  height: 200px;
+  width: 100%;
+  background-image: url('/imgs/produtos/repolho.svg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.product-img.batata {
+  background-image: url('/imgs/produtos/batata.svg');
+}
+
+.product-img.abobrinha {
+  background-image: url('/imgs/produtos/abobrinha.svg');
+}
+
+.product-img.cenoura {
+  background-image: url('/imgs/produtos/cenoura.svg');
+}
+.product-img.milho {
+  background-image: url('/imgs/produtos/milho.svg');
+}
+.product-img.alho {
+  background-image: url('/imgs/produtos/alho.svg');
+}
+
+.product-details {
+  width: 95%;
+  margin: 1rem auto 0 auto;
+  color: black;
+}
+
+.product-name {
+  font-weight: 700;
+}
+
+#container-sugestoes-chef .wrapper {
+  margin-top: 1rem;
+  display: flex;
+  justify-content: space-between;
+}
+
+.sub-name {
+  color: #a1a1a1;
+  letter-spacing: 1px;
+}
+
+.product-price {
+  font-weight: 700;
+  color: #f25c05;
+}
+
+@media (max-width: 640px) {
+  #container-promocao-semana .texto {
+    bottom: 140px;
+  }
 }
