--- a/style/homePage.css
+++ b/style/homePage.css
@@ -6,15 +6,141 @@
 }
 
 .funcionamento-container {
-  height: 531px;
   background: #059954;
+  width: 100vw;
+  margin-bottom: 120px;
+  padding: 4rem 20%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: white;
 }
 
-@media (max-width: 900px) {
+.funcionamento-container h2 {
+  font-size: 3rem;
+  text-align: center;
+  margin-bottom: 2rem;
+  letter-spacing: 2px;
+}
+
+.funcionamento-container p:not(:first-child) {
+  margin-top: 2rem;
+}
+
+.funcionamento-container p {
+  opacity: 0.7;
+}
+
+.planos-container .cards-container {
+  width: 70vw;
+  margin: 0 auto 120px auto;
+  display: flex;
+  justify-content: space-around;
+}
+
+.planos-container h2 {
+  font-size: 3rem;
+  color: #059954;
+  text-align: center;
+  margin-bottom: 6rem;
+  letter-spacing: 2px;
+  /*   font-size: 80px; */
+}
+
+.card-plano {
+  width: 305px;
+  height: 470px;
+  border: 1px solid #0599548a;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 2rem 0;
+  row-gap: 2rem;
+  color: #059954;
+  font-size: 1.2rem;
+  border-radius: 25px;
+  box-shadow: 3px 5px 4px #0599541c;
+  transition: all 0.5s;
+}
+
+.card-plano:hover {
+  transform: scale(1.2);
+  box-shadow: 9px 15px 6px #05995413;
+}
+
+.card-plano li span {
+  font-weight: 600;
+}
+
+.card-title {
+  font-size: 1.5rem;
+}
+
+.card-icon {
+  height: 150px;
+}
+
+.card-button {
+  width: 220px;
+  height: 40px;
+  letter-spacing: 1px;
+  color: #f25c05;
+  font-weight: 700;
+  background: none;
+  border: 1px solid #f25c05;
+  border-radius: 4px;
+  transition: all 0.5s;
+}
+
+.card-button:hover {
+  background: #f25c05;
+  color: white;
+  cursor: pointer;
+}
+
+@media (max-width: 1340px) {
+  body {
+  }
+
+  .planos-container .cards-container {
+    width: 85vw;
+  }
+}
+@media (max-width: 1100px) {
+  .planos-container .cards-container {
+    width: 95vw;
+  }
+}
+
+@media (max-width: 1000px) {
+  .planos-container .cards-container {
+    flex-direction: column;
+    align-items: center;
+    row-gap: 4rem;
+  }
+
+  body {
+  }
+
   .banner-container {
     max-width: 90vw;
+  }
+
+  .funcionamento-container {
+    padding: 4rem 10%;
+    text-align: center;
   }
 }
 
 @media (max-width: 640px) {
+  .card-button:hover {
+    background: none;
+    color: #f25c05;
+    cursor: pointer;
+  }
+
+  .card-plano:hover {
+    transform: scale(1);
+    box-shadow: 3px 5px 4px #0599541c;
+  }
 }
