--- a/style/cardapio.css
+++ b/style/cardapio.css
@@ -23,7 +23,8 @@
 }
 
 #container-promocao-semana {
-  background: url('/imgs/pictures/banner-cesta.svg');
+  background-color: black;
+  background: url('https://www.lotescbl.com.br/wp-content/uploads/2019/04/feiras-livres.jpg');
   height: 300px;
   background-repeat: no-repeat;
   background-size: cover;
@@ -31,6 +32,8 @@
   position: relative;
   max-width: 1460px;
   margin: 8rem auto 0 auto;
+  border-radius: 8px;
+  background-position-y: 20px;
 }
 
 .container-title {
@@ -60,9 +63,10 @@
   border-radius: 6px;
   border: none;
   background-color: #f25c05;
-  box-shadow: 3px 5px 5px rgba(0, 0, 0, 0.432);
+  box-shadow: 7px 6px 5px rgba(0, 0, 0, 0.658);
   color: white;
   letter-spacing: 1px;
+  cursor: pointer;
 }
 
 #container-sugestoes-chef {
