--- a/style/homePage.css
+++ b/style/homePage.css
@@ -1,8 +1,11 @@
 .banner-container {
   max-width: 80vw;
-  height: 254px;
+  height: 350px;
   margin: 66px auto;
-  background: #d9d9d9;
+  background-image: url('https://images.unsplash.com/photo-1488459716781-31db52582fe9?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+  background-size: cover;
+  background-position: center;
+  border-radius: 8px;
 }
 
 .funcionamento-container {
@@ -99,9 +102,6 @@
 }
 
 @media (max-width: 1340px) {
-  body {
-  }
-
   .planos-container .cards-container {
     width: 85vw;
   }
@@ -117,9 +117,6 @@
     flex-direction: column;
     align-items: center;
     row-gap: 4rem;
-  }
-
-  body {
   }
 
   .banner-container {
