--- a/style/homePage.css
+++ b/style/homePage.css
@@ -1,10 +1,9 @@
 .banner-container {
   height: 350px;
-  margin: 66px auto;
+
   background-image: url('https://images.unsplash.com/photo-1488459716781-31db52582fe9?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
   background-size: cover;
   background-position: center;
-  border-radius: 8px;
 }
 
 .funcionamento-container {
@@ -117,13 +116,13 @@
     row-gap: 4rem;
   }
 
-  .banner-container {
-    max-width: 90vw;
-  }
-
   .funcionamento-container {
     padding: 4rem 10%;
-    text-align: center;
+    /*     text-align: center; */
+  }
+
+  .funcionamento-container h2 {
+    font-size: 2rem;
   }
 }
 
