--- a/style/nav.css
+++ b/style/nav.css
@@ -6,6 +6,10 @@ nav {
   align-items: center;
   padding: 0 10%;
   color: white;
+  position: fixed;
+  width: 100%;
+  z-index: 2;
+  box-shadow: 3px 2px 5px rgba(0, 0, 0, 0.295);
 }
 
 #logo-icon {
@@ -24,8 +28,12 @@ nav {
   opacity: 0.7;
 }
 
+.nav-link:last-child {
+  display: none;
+}
+
 .nav-link a {
-  padding: 0.5rem 0.25rem;
+  padding: 0.5rem;
 }
 
 .nav-link a {
