--- a/style/cardapio.css
+++ b/style/cardapio.css
@@ -6,10 +6,11 @@
 #container-pesquisa {
   display: flex;
   align-items: center;
-  height: 60px;
+  height: 160px;
+  width: 100vw;
   background: #059954;
   justify-content: space-between;
-  padding: 0 10%;
+  padding: 4.5rem 10% 0 10%;
 }
 
 #container-pesquisa input {
@@ -158,6 +159,16 @@
   }
 
   #container-pesquisa {
-    padding: 0 5%;
+    padding: 0 5% 0 5%;
+    height: 60px;
+  }
+
+  #container-pesquisa p {
+    display: none;
+  }
+
+  #container-pesquisa input {
+    width: 90%;
+    margin: 0 auto;
   }
 }
