--- a/style/homePage.css
+++ b/style/homePage.css
@@ -8,6 +8,7 @@
 
 .funcionamento-container {
   background: #059954;
+  width: 100vw;
   margin-bottom: 120px;
   padding: 6rem 20%;
   display: flex;
@@ -31,10 +32,10 @@
 }
 
 .planos-container .cards-container {
-  width: 75vw;
+  width: 80vw;
   margin: 0 auto 120px auto;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .planos-container h2 {
@@ -99,7 +100,7 @@
 
 @media (max-width: 1340px) {
   .planos-container .cards-container {
-    width: 85vw;
+    width: 90vw;
   }
 }
 @media (max-width: 1100px) {
