--- a/style/nav.css
+++ b/style/nav.css
@@ -7,7 +7,7 @@ nav {
   padding: 0 10%;
   color: white;
   position: fixed;
-  width: 100%;
+  width: 100vw;
   z-index: 2;
   box-shadow: 3px 2px 5px rgba(0, 0, 0, 0.295);
 }
