--- a/style/homePage.css
+++ b/style/homePage.css
@@ -109,7 +109,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-
   row-gap: 4rem;
   max-width: 600px;
   margin: 4rem auto;
@@ -129,7 +128,7 @@
 
 .review-container {
   background: #059954;
-  padding: 2rem 1rem;
+  padding: 2rem 4rem;
   border-radius: 20px;
 }
 
@@ -180,7 +179,15 @@
   .review-card {
     flex-direction: column;
     align-items: center;
-    width: 320px;
+    width: 330px;
     row-gap: 2rem;
+  }
+
+  .review-container {
+    padding: 2rem 1rem;
+  }
+
+  #reviews-container h2 {
+    font-size: 1.75rem;
   }
 }
