--- a/style/modais.css
+++ b/style/modais.css
@@ -1,3 +1,32 @@
+#mobile-buttons-modal {
+  background: none;
+  color: white;
+  border: none;
+  position: absolute;
+  top: 80%;
+  left: 50%;
+  background: rgba(0, 0, 0, 0.658);
+  padding: 1rem 2rem;
+  border-radius: 8px;
+}
+
+.container-buttons-modal > * {
+  display: flex;
+  flex-direction: row-reverse;
+  column-gap: 1rem;
+  align-items: center;
+}
+
+#mobile-buttons-modal::backdrop {
+  background: rgba(0, 0, 0, 0.767);
+}
+
+#mobile-buttons-modal img {
+  height: 30px;
+}
+
+/* ----- */
+
 #create-account-modal {
   padding: 3rem 4rem;
   border-radius: 8px;
@@ -135,6 +164,7 @@
   border-radius: 4px;
   border: none;
   outline: none;
+  color: black;
 }
 
 #login-modal button {
